# trip-advisor-

./: .gitignore  CHANGELOG.md  README.md  compose.alpha.yml  compose.local.yml
.github/workflows/: check.yml.example  deploy.yml.example  release.yml
client/: .gitignore  README.md  package-lock.json  package.json
client-copy/: .gitignore  index.html  package.json
client-copy/src/: App.css
client-old/: Dockerfile.local  package.json  tailwind.config.ts
client-old/app/: layout.tsx
client-old/components/: ExploreCard.tsx  PlaceCard.tsx
client-old/store/: messageApi.ts  placeApi.ts  tripApi.ts
client-old/types/: server.d.ts
client-previous/: Dockerfile.local  index.html  package.json  readme.md
client/app/: globals.css  layout.tsx
client/components/: ExploreCard.tsx  Message.tsx  TripCard.tsx
client/src/: index.css
client/store/: emptySplitApi.ts  itinerary.ts  messageApi.ts  tripApi.ts
my-app/: package-lock.json  package.json  tailwind.config.ts
server/: Dockerfile.alpha  Dockerfile.local  concept.excalidraw  default.sqlite  main.py  pyproject.toml
server-previous/: .env.example  Dockerfile.alpha  Dockerfile.local  default.sqlite  main.py  test_main.py
server/libs/: vertex.py
server/libs/mimetypes/: index.py
server/libs/openai/: index.py
server/libs/places/: index.py
server/libs/prisma/: index.py
server/libs/redis/: index.py
server/libs/vertexAI/: AudioConversion.py  TrueLens.py  index.py
server/prisma/: schema.prisma
server/routers/: itineraries.py  locations.json  locations.py  photos.py  trips.py  users.py
(+63 files in other folders)
